--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "eslint": "^8.10.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
