--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^8.10.0",
     "eslint-plugin-vue": "^8.5.0",
     "lint-staged": "^12.3.4",
+    "pinia": "^2.0.11",
     "sass": "^1.49.9",
     "stylelint": "^14.5.3",
     "stylelint-scss": "^4.1.0",
