--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "axios": "^0.26.0",
+    "echarts": "^5.3.0",
     "eslint": "^8.10.0",
     "eslint-plugin-vue": "^8.5.0",
     "lint-staged": "^12.3.4",
